# neo4j-graphrag

./: env.sample  main.py  pyproject.toml
docs/: KG_P1_01_neo4j_Introduction.ipynb
