[project]
name = "neo4j-graphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=0.3.30",
    "langchain-google-genai>=2.1.12",
    "langchain-neo4j>=0.3.0",
    "langchain-openai>=0.3.35",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
]
